--- a/src/main/resources/webapp/css/stylus.css
+++ b/src/main/resources/webapp/css/stylus.css
@@ -1,3 +1,22 @@
-.progress .progress-bar.reversed{
+.progress .progress-bar.reversed {
     animation-direction: reverse;
+}
+
+.label.shift-version {
+    float:right;
+    margin-left: 2px;
+}
+
+
+.label.shift-status {
+    float:left;
+    margin-right: 5px;
+}
+
+.text-ellipsis {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 190px;
+    padding-right: 5px;
 }
