--- a/src/main/resources/webapp/css/stylus.css
+++ b/src/main/resources/webapp/css/stylus.css
@@ -16,7 +16,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    width: 190px;
+    width: 100%;
     padding-right: 5px;
 }
 
@@ -24,3 +24,8 @@
     padding: 7px;
     margin-bottom: 5px;
 }
+
+.table-fixed {
+    table-layout: fixed;
+}
+
